<resources>
    <string name="app_name" translatable="false">fellow.</string>
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiZmVsbG93Z3IiLCJhIjoiY2wweHRkMnVsMW5kMDNsanc0bmxrNnlodCJ9.cSRawZAlHDCZSlwwZEMBFg</string>
    <string name="PLACE_LANGUAGE">el</string>
    <string name="USER_INFO" translatable="false">userAuth</string>
    <string name="DEFAULT" translatable="false">default</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="euro_symbol" translatable="false">€</string>
    <string name="register_fragment_stage_2_choose_password_title">Επιλογή συνθηματικού</string>
    <string name="password_complexity_requirements_description">Το συνθηματικό σας πρέπει να είναι τουλάχιστον 8 χαρακτήρες και να περιλαμβάνει τουλάχιστον έναν αριθμό, ένα κεφαλαίο, ένα μικρό γράμμα και έναν ειδικό χαρακτήρα.</string>
    <string name="register_fragment_stage_1_add_email_title">Ποιο είναι το email σας;</string>
    <string name="register_fragment_stage_1_email_input_field_title">Διεύθυνση email</string>
    <string name="register_fragment_become_a_fellow_traveller">Γίνε κι εσύ ένας Fellow \nTraveller</string>
    <string name="register_fragment_six_digit_code_notice_description">Θα λάβετε έναν 6-ψήφιο κωδικό για την επιβεβαίωση του λογαριασμού.</string>
    <string name="account_fragment_about_me">Δεν υπάρχει κάποια σχετική περιγραφή.</string>
    <string name="change_password">Αλλαγή Συνθηματικού</string>
    <string name="change">Αλλαγή</string>
    <string name="change_time">Αλλαγή Ώρας</string>
    <string name="add_date">Προσθήκη Ημ/νιας</string>
    <string name="confirm_password">Επιβεβαίωση συνθηματικού</string>
    <string name="PASSWORD_CHANGED_SUCCESSFULLY">Το συνθηματικό πρόσβασης άλλαξε επιτυχώς.</string>
    <string name="EMAIL_PLACEHOLDER">π.χ. user@example.com</string>
    <string name="submit_trip_offer_success">Επιτυχής καταχώρηση!</string>
    <string name="book_trip_success">Συγχαρητήρια! Συμμετέχεις σε αυτό το ταξίδι</string>
    <string name="submit_rating_success">Η αξιολόγηση σας καταχωρήθηκε</string>
    <string name="hello">Γεια σου</string>
    <string name="home_guide">Ξεκίνησε αναζητώντας ή προσφέροντας ένα ταξίδι</string>
    <string name="or">ή</string>
    <string name="sum">σύνολο</string>
    <string name="account_settings_access_denied">Δεν έδωσες άδεια στην εφαρμογή για το ανέβασμα φωτογραφίας</string>
    <string name="account_settings_dialog_message">Θα πρέπει να ρυθμίσεις τις άδειες της εφαρμογής για το ανέβασμα φωτογραφίας. Θέλεις να συνεχίσεις;</string>
    <string name="account_settings_guid_message">Θα πρέπει να ενεργοποιήσεις τις άδειες της εφαρμογής από τις ρυθμίσεις</string>
    <string name="covid">Ενημέρωση για τον <b><u>Covid-19</u></b></string>
    <string name="no_messages">Δεν υπάρχει κάποιο μήνυμα</string>
    <string name="title_activity_maps">Χάρτης</string>
    <string name="no_driver_message">Δεν υπάρχει κάποιο μήνυμα από τον οδηγό.</string>
    <string name="set_date">Όρισε την ημερομηνία</string>
    <string name="set_time">Όρισε την ώρα</string>
    <string name="select_car">Επέλεξε όχημα</string>
    <string name="allowed">Επιτρέπονται</string>
    <string name="not_allowed">Δεν επιτρέπονται</string>
    <string name="with_pets">Με κατοικίδιο</string>
    <string name="without_pets">Χωρίς κατοικίδιο</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="price" translatable="false">%s €</string>
    <string name="range_text">Εύρος %s χλμ.</string>
    <string name="range_text_price" formatted="false">Έως %s €</string>
    <string name="range_text_in_filters" formatted="false" translatable="false">%s ~ %s </string>
    <string name="filter_price_range_description">Με την επιλογή αυτή καθορίζεις την μέγιστη τιμή</string>
    <string name="filter_from_range_description">Με την επιλογή αυτή αυξάνεις την ακτίνα της αφετηρίας</string>
    <string name="filter_to_range_description">Με την επιλογή αυτή αυξάνεις την ακτίνα του προορισμού</string>
    <string name="have_pet">Έχω κατοικίδιο</string>
    <string name="have_not_pet">Δεν έχω κατοικίδιο</string>
    <string name="not_selected_filters">Δεν έχετε ορίσει κάποιο φίλτρο.</string>
    <string name="trip_found">%s αποτελέσματα</string>
    <string name="messenger_link" translatable="false">https://m.me/%s</string>
    <string name="show_password">Εμφάνιση</string>
    <string name="hide_password">Απόκρυψη</string>
    <string name="email_verify" formatted="false">Σου έχουμε αποστείλει ένα email επιβεβαίωσης στο \n&lt;b&gt;%s&lt;/b></string>
    <string name="fragment_destinations_header">Εισήγαγε την αφετηρία και τον προορισμό</string>
    <string name="starting_point">Αφετηρία</string>
    <string name="destination">Προορισμός</string>
    <string name="fragment_pick_up_header">Ποιο είναι το σημείο αναχώρησης;</string>
    <string name="select_destination_pick_up">Σημείο αναχώρησης</string>
    <string name="fragment_date_time_header">Πότε θα πραγματοποιηθεί το ταξίδι;</string>
    <string name="fragment_base_info_header">Καθόρισε τα στοιχεία του ταξιδιού</string>
    <string name="fragment_price_overview" translatable="false">%s x %s €</string>
    <string name="trip_involved_description">Κατάσταση ταξιδιού:  &lt;b&gt;%s&lt;/b></string>
    <string name="trip_involved_passenger_description_as_creator">Ελπίζουμε σύντομα να βρεις τους ιδανικούς συνεπιβάτες σου</string>
    <string name="trip_involved_passenger_header_in_history">Δεν βρέθηκε κάποιος επιβάτης</string>
    <string name="trip_involved_passenger_description_in_history">Φαίνεται πως σε αυτό το ταξίδι σου δεν συμμετείχε κάποιος άλλος επιβάτης</string>
    <string name="trip_involved_passenger_header">Δεν υπάρχουν επιβάτες</string>
    <string name="trip_involved_passenger_description_as_passenger">Γίνε εσύ ο πρώτος επιβάτης αυτού του ταξιδιού</string>
    <string name="brand">Μάρκα</string>
    <string name="model">Μοντέλο</string>
    <string name="plate">Αριθμός Κυκλοφορίας</string>
    <string name="color">Χρώμα</string>
    <string name="car_delete_confirmation_message">Διαγραφή του οχήματος με αριθμό πινακίδας <b>%s</b></string>
    <string name="regex_min_3_chars_english" translatable="false">^[a-zA-Z0-9]{3,}$</string>
    <string name="regex_min_3_chars_english_with_space" translatable="false">^[a-zA-Z0-9_ ]{3,}$</string>
    <string name="regex_min_2_chars_english_with_space" translatable="false">^[a-zA-Z0-9_ ]{2,}$</string>
    <string name="regex_min_3_chars" translatable="false">^.{3,}$</string>
    <string name="regex_min_1_chars" translatable="false">^.{1,}$</string>
    <string name="regex_min_6_chars" translatable="false">^.{6,}$</string>
    <string name="regex_accept_all" translatable="false">^.{0,50}$</string>
    <string name="regex_car_plate" translatable="false">^([ΑΒΕΖΗΙΚΜΝΟΡΤΥΧ]|[ABEZHIKMNORTYX]){3}-[0-9]{4}$</string>
    <string name="notification_to_rate">Ήρθε η ώρα να αξιολογήσεις το χρήστη &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="notification_delete_trip">Ο χρήστης &lt;b&gt;%s&lt;/b&gt; ακύρωσε ένα ταξίδι στο οποίο είχες κάνει κράτηση.</string>
    <string name="notification_passenger_enter">Ο χρήστης &lt;b&gt;%s&lt;/b&gt; έκανε κράτηση στο ταξίδι σου.</string>
    <string name="notification_passenger_exit">Ο χρήστης &lt;b&gt;%s&lt;/b&gt; ακύρωσε την κράτηση από το ταξίδι σου.</string>
    <string name="notification_to_rate_title">Αξιολόγηση</string>
    <string name="notification_delete_trip_title">Διαγραφή ταξιδιού</string>
    <string name="notification_passenger_enter_title">Νέος επιβάτης</string>
    <string name="notification_passenger_exit_title">Αποχώρηση επιβάτη</string>
    <string name="image_upload_success">Η φωτογραφία ανέβηκε επιτυχώς</string>
    <string name="image_upload_failure">Η φωτογραφία που επέλεξες δεν είναι έγκυρη</string>
    <string name="profile_update_success">Επιτυχής Αποθήκευση</string>
    <string name="internet_connection_failure">\'Έλεγξε την σύνδεση του δικτύου σας για το ανεβάσμα νέας φωτογραφίας</string>
    <string name="driver_no_pets_allowed">Λυπούμαστε! Το ταξίδι αυτό δεν επιτρέπει κατοικίδια.</string>
    <string name="password_change_success">Επιτυχής αλλαγή συνθηματικού!</string>
    <string name="password_missing">Παρακαλώ συμπληρώστε το συνθηματικό.</string>
    <string name="send_message">Στείλε μήνυμα.</string>
    <string name="send_message_to">Στείλε μήνυμα στον %s</string>
    <string name="conversation_passenger_entry">Ο χρήστης &lt;b&gt;%s&lt;/b&gt; προστέθηκε στο ταξίδι</string>
    <string name="conversation_passenger_exited">Ο χρήστης &lt;b&gt;%s&lt;/b&gt; αποχώρησε από το ταξίδι</string>
    <string name="conversation_creator_name">Από &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="conversation_welcome_header">Καλώς ήρθατε σε αυτό το ταξίδι</string>
    <string name="conversation_welcome_description">Αυτή είναι η συζήτηση για το ταξίδι σας. Εδώ μπορείτε να διευκρινίσετε τυχόν απορίες.</string>
    <string name="complete_profile_setup">Ολοκλήρωση προφίλ</string>
    <string name="enter_messenger_link">Συμπληρώσε το όνομα χρήστη σου στο Messenger.</string>
    <string name="complete_profile_warning">Πρέπει πρώτα να ολοκληρώσεις το προφίλ!</string>
    <string name="error_msg">Σφάλμα</string>
    <string name="authentication_success">Επιτυχής Επιβεβαίωση</string>
    <string name="authentication_account">Επιβεβαίωση λογαριασμού</string>
    <string name="msg_continue">Συνέχεια</string>
    <string name="placeholder_car_make_model" translatable="false">Rolls-Royce Phantom</string>
    <string name="bookings">Κρατήσεις</string>
    <string name="active">Ενεργά</string>
    <string name="offers">Προσφορές</string>
    <string name="delete_trip_success">Επιτυχής διαγραφή ταξιδιού</string>
    <string name="leave_trip_success">Επιτυχής Ακύρωση Κράτησης</string>
    <string name="messenger_url" translatable="false">https://m.me/</string>
    <string name="prompt_cancel_offer">Ακύρωση καταχώρησης προσφοράς ταξιδιού;</string>
    <string name="seat">Θέση</string>
    <string name="edit">Επεξεργασία</string>
    <string name="seats">Θέσεις</string>
    <string name="driver_deleted_trip_header">Ο οδηγός έχει ακυρώσει αυτό το ταξίδι</string>
    <string name="pet_companionship">Συνοδεία Κατοικιδίου</string>
    <string name="cancel_search">Ακύρωση αναζήτησης;</string>
    <string name="placeholder_city_athens">Αθήνα</string>
    <string name="placeholder_city_thessaloniki">Θεσσαλονίκη</string>
    <string name="rate_user_placeholder" translatable="false">Tyler Joseph</string>
    <string name="date">Ημερομηνία</string>
    <string name="baggage_allowance">Χώρος Αποσκεύων</string>
    <string name="availability_none">Καθόλου</string>
    <string name="availability_limited">Περιορισμένη</string>
    <string name="availability_great">Μεγάλη</string>
    <string name="password">Συνθηματικό Πρόσβασης</string>
    <string name="from">Από</string>
    <string name="to">Προς</string>
    <string name="price_placeholder" translatable="false">10</string>
    <string name="ensure_account_security">Για να διασφαλίσεις τον λογαριαμό σου</string>
    <string name="placeholder_date">22 Φεβ. 2020</string>
    <string name="placeholder_time">20:30</string>
    <string name="time">Ώρα</string>
    <string name="passenger_availability_placeholder" translatable="false">3/4</string>
    <string name="repeat_password">Επανάληψη συνθηματικού</string>
    <string name="lowercase_letters">Πεζά γράμματα</string>
    <string name="uppercase_letters">Κεφαλαία γράμματα</string>
    <string name="digits">Αριθμοί</string>
    <string name="special_characters">Ειδικοί χαρακτήρες</string>
    <string name="password_error">Ο κωδικός πρόσβασης πρέπει να περιέχει τουλάχιστον 6 χαρακτήρες. Προεραιτικά τουλάχιστον 1 πεζό, 1 κεφαλαίο και 1 αριθμό</string>
</resources>