<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.fragments.PasswordFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="160dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/SetPasswordFragment_choose_password_title_TextView"
                style="@style/display_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/register_fragment_stage_2_choose_password_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SetPasswordFragment_password_info"
                style="@style/paragraph_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_label_title"
                android:layout_marginEnd="16dp"
                android:text="@string/ensure_account_security"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/SetPasswordFragment_choose_password_title_TextView"
                app:layout_constraintTop_toBottomOf="@id/SetPasswordFragment_choose_password_title_TextView" />


            <gr.fellow.fellow_traveller.ui.views.FellowEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                app:error_message_f="@string/password_error"
                app:hint_f="@string/password"
                app:imeOptions_f="actionNext"
                app:layout_constraintEnd_toEndOf="@+id/SetPasswordFragment_password_info"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/SetPasswordFragment_password_info"
                app:layout_constraintTop_toBottomOf="@+id/SetPasswordFragment_password_info"
                app:regex_f="@string/regex_min_6_chars"
                app:text_type_f="textPassword" />


            <LinearLayout
                android:id="@+id/password_str"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password">


                <TextView
                    android:id="@+id/lowerCase_txt"
                    style="@style/paragraph_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/lowercase_letters"
                    android:textColor="@color/dark_gray_new"
                    app:drawableStartCompat="@drawable/ic_tick"
                    app:drawableTint="@color/dark_gray_new" />


                <TextView
                    android:id="@+id/upperCase_txt"
                    style="@style/paragraph_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/uppercase_letters"
                    android:textColor="@color/dark_gray_new"
                    app:drawableStartCompat="@drawable/ic_tick"
                    app:drawableTint="@color/dark_gray_new" />


                <TextView
                    android:id="@+id/digit_txt"
                    style="@style/paragraph_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/digits"
                    android:textColor="@color/dark_gray_new"
                    app:drawableStartCompat="@drawable/ic_tick"
                    app:drawableTint="@color/dark_gray_new" />


                <TextView
                    android:id="@+id/specialChar_txt"
                    style="@style/paragraph_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/special_characters"
                    android:textColor="@color/dark_gray_new"
                    app:drawableStartCompat="@drawable/ic_tick"
                    app:drawableTint="@color/dark_gray_new" />


            </LinearLayout>


            <gr.fellow.fellow_traveller.ui.views.FellowEditText
                android:id="@+id/password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:hint_f="@string/repeat_password"
                app:imeOptions_f="actionDone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_str"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="@+id/password_str"
                app:layout_constraintTop_toBottomOf="@+id/password_str"
                app:layout_constraintVertical_bias="0.04000002"
                app:regex_f="@string/regex_accept_all"
                app:text_type_f="textPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <include
        android:id="@+id/ImageButton_next"
        layout="@layout/register_float_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/new_trip_float_action_button_margin_right"
        android:layout_marginBottom="@dimen/new_trip_float_action_button_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>