<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white_radius_28">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/paragraph_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/rate_user_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/picture"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintStart_toEndOf="@id/picture"
            app:layout_constraintTop_toTopOf="@id/picture" />

        <TextView
            android:id="@+id/price"
            style="@style/display_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/price_placeholder"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/picture"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/picture" />

        <TextView
            android:id="@+id/from_tv_search"
            style="@style/paragraph_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/from"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintStart_toStartOf="@id/picture"
            app:layout_constraintTop_toBottomOf="@id/picture" />

        <TextView
            android:id="@+id/from"
            style="@style/header_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="middle"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:singleLine="true"
            android:text="@string/placeholder_city_athens"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@id/from_tv_search"
            app:layout_constraintTop_toBottomOf="@id/from_tv_search" />

        <TextView
            android:id="@+id/to_tv_search"
            style="@style/paragraph_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="@+id/to"
            app:layout_constraintTop_toBottomOf="@+id/from" />

        <TextView
            android:id="@+id/to"
            style="@style/header_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:text="@string/placeholder_city_thessaloniki"
            app:layout_constraintEnd_toEndOf="@+id/from"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintStart_toStartOf="@+id/from"
            app:layout_constraintTop_toBottomOf="@+id/to_tv_search" />

        <TextView
            android:id="@+id/date_tv_search"
            style="@style/paragraph_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/from_tv_search" />

        <TextView
            android:id="@+id/date"
            style="@style/paragraph_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/from"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintStart_toStartOf="@+id/date_tv_search" />

        <TextView
            android:id="@+id/time_tv_search"
            style="@style/paragraph_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/to_tv_search" />

        <TextView
            android:id="@+id/time"
            style="@style/paragraph_1"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/to"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintStart_toStartOf="@id/time_tv_search" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <TextView
            android:id="@+id/seats"
            style="@style/paragraph_4"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/passenger_availability_placeholder"
            app:drawableStartCompat="@drawable/ic_seat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bags"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to"
            app:drawableTint="@color/shimmer_color" />

        <TextView
            android:id="@+id/bags"
            style="@style/paragraph_4"
            android:layout_width="wrap_content"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center"
            app:drawableTint="@color/shimmer_color"
            android:text="@string/availability_limited"
            app:drawableStartCompat="@drawable/ic_luggage"
            app:layout_constraintBottom_toBottomOf="@+id/seats"
            app:layout_constraintEnd_toStartOf="@+id/pet"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seats"
            app:layout_constraintTop_toTopOf="@+id/seats" />

        <TextView
            android:id="@+id/pet"
            style="@style/paragraph_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTint="@color/shimmer_color"
            android:background="@drawable/background_shimmer_32dp"
            android:textColor="@color/shimmer_color"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/without_pets"
            app:drawableStartCompat="@drawable/ic_bone"
            app:layout_constraintBottom_toBottomOf="@+id/bags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bags"
            app:layout_constraintTop_toTopOf="@+id/bags" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>