<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape_center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/header_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel_search"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/softGrey_color" />

    <Button
        android:id="@+id/exit"
        style="@style/button_orange_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/black_new"
        android:background="?android:attr/selectableItemBackground"/>


    <View
        android:id="@+id/abort_dialog_bottom_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/softGrey_color" />


    <Button
        android:id="@+id/stay"
        style="@style/button_orange_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/red_color"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>