<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_shape">

    <TextView
        android:id="@+id/title"
        style="@style/header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/pet_companionship"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yes"
        style="@style/header_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="@+id/no"
        app:layout_constraintStart_toStartOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/no"
        style="@style/header_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes" />


</androidx.constraintlayout.widget.ConstraintLayout>

